# ivp-procesador-paneles-fotograficos

./: .gitignore  DIRECTRICES_PROYECTO.md  README.md  clean_cache.py  pyproject.toml  run.py
config/: pdf_settings.yaml  prompts.yaml  settings.yaml
src/: __init__.py  compare_extractors.py  main.py  test_advanced_extractor.py  test_llm_validation.py
src/llm_processor/: __init__.py  activity_validator.py  llm_processor.py
src/pdf_generator/: __init__.py  pdf_generator.py  pdf_unifier.py
src/pdf_processor/: __init__.py  advanced_image_extractor.py  borrar.py  image_extractor.py  page_separator.py  text_extractor.py
src/utils/: file_manager.py  output_organizer.py
